--- a/fundamentos/secao-1-introducao/dia-3-seletores-posicionamento/index.html
+++ b/fundamentos/secao-1-introducao/dia-3-seletores-posicionamento/index.html
@@ -32,3 +32,24 @@
     <img src="https://bit.ly/3tmxgED" alt="baloon" class="baloon" />
   </body>
 </html>
+
+
+
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8">
+    <title>Agrupando Seletores</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1>Lista dos Melhores Sites que já vi</h1>
+    <p>Top 3 dos melhores sites que existem na web</p>
+    <lo>www.netflix.com..br
+        www.primevideo.com
+        www.hbomax.com.br
+        
+    </lo>
+    <p>Principais motivos para eu gostar deles</p>
+  </body>
+</html>
