--- a/fundamentos/secao-1-introducao/dia-3-seletores-posicionamento/index 3.html
+++ b/fundamentos/secao-1-introducao/dia-3-seletores-posicionamento/index 3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Agrupando Seletores</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style3.css">
   </head>
   <body>
     <h1>Lista dos Melhores Sites que já vi</h1>
@@ -14,5 +14,10 @@
       <li>www.netflix.com</li> 
     </ol>
     <p>Principais motivos para eu gostar deles</p>
+    <ul>
+      <li>Navegação/li> 
+      <li>Atualização</li> 
+      <li>Conteúdo</li> 
+    </ol>
   </body>
 </html>
