--- a/fundamentos/secao-1-introducao/dia-3-seletores-posicionamento/index 3.html
+++ b/fundamentos/secao-1-introducao/dia-3-seletores-posicionamento/index 3.html
@@ -15,7 +15,7 @@
     </ol>
     <p>Principais motivos para eu gostar deles</p>
     <ul>
-      <li>Navegação/li> 
+      <li>Navegação</li> 
       <li>Atualização</li> 
       <li>Conteúdo</li> 
     </ol>
